# othello-rl

./: README.md  package-lock.json  package.json
app/: page.tsx
backend/: .gitignore  Cargo.toml  README.md
backend/othello_agent/: Cargo.toml
backend/othello_agent/src/: lib.rs
backend/othello_agent/src/agent/: mod.rs  rule_based.rs  traits.rs  utils.rs  value_based.rs
backend/othello_agent/src/gameplay/: constants.rs  encoding.rs  game.rs  mod.rs  position.rs  recommender.rs  utils.rs
backend/othello_agent/src/model/: batch.rs  dataset.rs  (+3 more)
backend/othello_server/: Cargo.toml
backend/othello_server/src/: main.rs
backend/tmp/: README.md
components/: othelloPiece.tsx
frontend/: .env.example  .gitignore  README.md  package.json
frontend/app/: layout.tsx
frontend/app/test/: page.tsx
frontend/components/: othelloBoard.tsx  othelloPiece.tsx  shareGameButton.tsx
frontend/components/metrics/: Fathom.tsx
frontend/constants/: index.ts
frontend/helpers/: gameplay.ts  requests.ts
frontend/store/: index.ts
frontend/store/actions/: index.ts
frontend/store/reducers/: index.ts
frontend/store/sagas/: index.ts
frontend/types/: index.ts
othello-agent/: Cargo.toml
othello-agent/src/: lib.rs
othello-agent/src/agent/: mod.rs  rule_based.rs  traits.rs
othello-agent/src/gameplay/: constants.rs  encoding.rs  mod.rs  recommender.rs  types.rs  utils.rs
othello-agent/src/simulate/: game.rs  history.rs  mod.rs
othello-backend/: Cargo.toml
othello-backend/src/: main.rs
othello-backend/src/realtime/: server.rs  session.rs
types/: index.ts
(+6 files in other folders)
