[package]
name = "othello-agent"
version = "0.1.1"
edition = "2021"
description = "A simple Othello library. Contains useful methods for interacting with the game and creating autonomous Othello agents."
repository = "https://github.com/jettblu/othello-agent"
authors = ["Jett Hays <jetthays.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
