[package]
name = "othello_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
othello_agent = { path = "../othello_agent" }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
uuid = { version = "1.7.0", features = ["v4", "serde"] }
actix-web-actors = "4.0.0"
actix = "0.13.3"
rand = "0.8.4"
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1"
futures = "0.3"
actix-ws = "0.2.5"
rl_examples = "0.1.0"




